--- a/frontend/src/themes/winter.css
+++ b/frontend/src/themes/winter.css
@@ -167,6 +167,7 @@
 
 [data-theme='winter'] .map-container.taskbar-hidden {
   margin-left: 0px;
+  width: 100%;
 }
 
 [data-theme='winter'] .leaflet-container {
@@ -174,6 +175,12 @@
   height: 100%;
 }
 
-[data-theme='winter'] .taskbar.hidden .create-post-button {
-  left: 20px;
+[data-theme='winter'] .create-post-button {
+  top: 20px;
+  left: 160px;
+}
+
+[data-theme='winter'] .filter-toggle-button {
+  top: 70px;
+  left: 160px;
 }
