--- a/frontend/src/components/Map.css
+++ b/frontend/src/components/Map.css
@@ -16,6 +16,27 @@
   transition-timing-function: ease-in-out;
 }
 
+.map-container.create-post-mode {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>') 12 24, crosshair !important;
+}
+
+.map-container.create-post-mode,
+.map-container.create-post-mode * {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="48" viewBox="0 0 32 48"><path d="M16 0C7.163 0 0 7.163 0 16c0 12.944 16 32 16 32s16-19.056 16-32C32 7.163 24.837 0 16 0zm0 24a8 8 0 1 1 0-16 8 8 0 0 1 0 16z" fill="red"/></svg>') 16 48, pointer !important;
+}
+
+.map-container.create-post-mode .mapboxgl-canvas {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>') 12 24, crosshair !important;
+}
+
+.map-container.create-post-mode .mapboxgl-canvas-container {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>') 12 24, crosshair !important;
+}
+
+.map-container.create-post-mode .mapboxgl-map {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>') 12 24, crosshair !important;
+}
+
 /* Mobile portrait mode */
 @media screen and (max-width: 768px) and (orientation: portrait) {
   .map-container {
@@ -24,7 +45,7 @@
     top: 0;
     height: 100%;
     transition: all 0.3s ease-in-out;
-    will-change: top, height;
+    will-change: top, height;   
   }
 
   .map-container.taskbar-hidden {
